--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         as possible or just give me a <a class="link" href="tel:+883579558">Call</a></p>
                 </div>
                 <div class="contact-form">
-                    <form action="https://formsubmit.co/your@email.com" method="POST"
+                    <form action="https://formsubmit.co/paterska.j@gmail.com" method="POST">
                         <div class="form-box">
                             <input type="text" id="name" placeholder="name" name="name" id="name">
                             <p class="errortext"></p>
