call and animation change

--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
                         class="fa-brands fa-html5"></i>
                     <p class="heading">html</p>
                 </div>
-                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="150"><i
+                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="100"><i
                         class="fa-brands fa-css3-alt"></i>
                     <p class="heading">css</p>
                 </div>
-                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="200"><i
+                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="150"><i
                         class="fa-brands fa-sass"></i>
                     <p class="heading">Sass</p>
                 </div>
-                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="250"><i
+                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="200"><i
                         class="fa-brands fa-js"></i>
                     <p class="heading">javascript</p>
                 </div>
 
-                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="300"><i
+                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="250"><i
                         class="fa-brands fa-python"></i>
                     <p class="heading">python</p>
                 </div>
-                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="350"><i
+                <div class="col-sm-6 col-md-4 text-center item" data-aos="zoom-in" data-aos-delay="300"><i
                         class="fa-brands fa-bootstrap"></i>
                     <p class="heading">bootstrap</p>
                 </div>
-                <div class="col-sm-6 col-md-4  text-center item" data-aos="zoom-in" data-aos-delay="450"><i
+                <div class="col-sm-6 col-md-4  text-center item" data-aos="zoom-in" data-aos-delay="350"><i
                         class="fa-brands fa-github"></i>
                     <p class="heading">github</p>
                 </div>
@@ -134,7 +134,7 @@
                         </div>
                         <div class="links">
                             <a class="link" href="https://github.com/naluja/advice-generator">view code</a>
-                            <a class="link" href="https://app.netlify.com/sites/playful-chebakia-427208/overview">view
+                            <a class="link" href="https://playful-chebakia-427208.netlify.app/">view
                                 site</a>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                 <div class="contact-text">
                     <h2>Contact Me</h2>
                     <p>If you're interested in collaboration please fill in the form, and I'll get back to you as soon
-                        as possible or just give me a <a class="link" href="tel:+883579558">Call</a></p>
+                        as possible or just give me a <a class="call" href="tel:+883579558">Call</a></p>
                 </div>
                 <div class="contact-form">
                     <form action="https://formsubmit.co/paterska.j@gmail.com" method="POST">
@@ -202,7 +202,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="aos.js"></script>
     <script src="script.js"></script>
-   
+
 </body>
 
 </html>
