--- a/index.html
+++ b/index.html
@@ -156,6 +156,23 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-6 col-xl-4">
+                    <div class="project-card p5">
+                        <div class="photo">
+                        </div>
+                        <div class="name">holiday countdown</div>
+                        <div class="technologies">
+                            <p>html</p>
+                            <p>css</p>
+                            <p>javascript</p>
+                        </div>
+                        <div class="links">
+                            <a class="link" href="https://github.com/naluja/timecount">view code</a>
+                            <a class="link" href="https://marvelous-klepon-1f992f.netlify.app/">view site</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
