add project ipadresstracker

--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
         <section class="projects" id="projects">
             <h2>Projects</h2>
             <div class="row">
+
+                <div class="col-md-6 col-xl-4">
+                    <div class="project-card p0">
+                        <div class="photo">
+                        </div>
+                        <div class="name">IP Adress Tracker</div>
+                        <div class="technologies">
+                            <p>html</p>
+                            <p>sass</p>
+                            <p>javascript</p>
+                            <p>api</p>
+                        </div>
+                        <div class="links">
+                            <a class="link" href="https://github.com/naluja/ipadresstracker">view code</a>
+                            <a class="link" href="https://ipaddresstrackernaluja.netlify.app/">view site</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-md-6 col-xl-4">
                     <div class="project-card p1">
                         <div class="photo">
