--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="header-content">
             <div class="text">
                 <h1>Hi! <br>I'm <span class="bb">Julia Bartczak</span></h1>
-                <p>Inividual driven by a passion for creativity and the art of creation. In 2022, I embarked on a
+                <p>Inividual driven by a passion for creativity. In 2022, I embarked on a
                     programming journey by undertaking the CS50 Introduction to Computer
                     Science course. Completing this course in December sparked my decision to specialize in frontend
                     development. </p>
