--- a/index.html
+++ b/index.html
@@ -88,6 +88,25 @@
             <div class="row">
 
                 <div class="col-md-6 col-xl-4">
+                    <div class="project-card p01">
+                        <div class="photo">
+                        </div>
+                        <div class="name">Beady Films <span>commercial</span>
+                        </div>
+                        <div class="technologies">
+                            <p>html</p>
+                            <p>sass</p>
+                            <p>javascript</p>
+                            <p>bootstrap</p>
+                        </div>
+                        <div class="links">
+                            <a class="link" href="https://github.com/naluja/beadyfilms">view code</a>
+                            <a class="link" href="https://beadyfilms.com/">view site</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-xl-4">
                     <div class="project-card p0">
                         <div class="photo">
                         </div>
